<resources>
    <string name="app_name">TravelTaipei</string>
    <string name="title_attractions">Attractions</string>
    <string name="title_events">Events</string>
    <string name="title_tour">Tour</string>
    <string name="lang_zh_tw">正體中文</string>
    <string name="lang_zh_cn">简体中文</string>
    <string name="lang_en">English</string>
    <string name="lang_ja">日本語</string>
    <string name="lang_ko">한국어</string>
    <string name="lang_es">español</string>
    <string name="lang_id">bahasa Indonesia</string>
    <string name="lang_th">แบบไทย</string>
    <string name="lang_vi">Tiếng Việt</string>
</resources>